--- a/apps/mobile/locales/en.json
+++ b/apps/mobile/locales/en.json
@@ -24,14 +24,16 @@
     "signIn": "Sign in",
     "signOut": "Sign out",
     "signUp": "Sign up",
+    "logIn": "Log in",
     "signingIn": "Signing in...",
     "sending": "Sending...",
     "email": "Email",
     "emailAddress": "Email address",
-    "emailPlaceholder": "Email address",
+    "emailPlaceholder": "Email",
     "password": "Password",
     "passwordPlaceholder": "Password",
-    "confirmPasswordPlaceholder": "Confirm password",
+    "confirmPassword": "Confirm your password",
+    "confirmPasswordPlaceholder": "Confirm your password",
     "fullNamePlaceholder": "Full name (optional)",
     "forgotPassword": "Forgot password?",
     "resetPassword": "Reset password",
@@ -50,6 +52,7 @@
     "signInWithApple": "Sign in with Apple",
     "signInWithGoogle": "Sign in with Google",
     "orEmail": "or email",
+    "or": "or",
     "orContinueWith": "Or continue with",
     "alreadyHaveAccount": "Already have an account?",
     "dontHaveAccount": "Don't have an account?",
@@ -73,7 +76,29 @@
     "verificationEmailSent": "We've sent a verification link to",
     "openEmailApp": "Open email app",
     "goToSignIn": "Go to sign in",
-    "verifyEmailInstructions": "Click the link in the email to verify your account, then sign in."
+    "verifyEmailInstructions": "Click the link in the email to verify your account, then sign in.",
+    "welcomeTitle": "Hire Kortix for",
+    "rotatingPhrases": {
+      "presentations": "presentations",
+      "writing": "writing",
+      "emails": "emails",
+      "research": "research",
+      "planning": "planning",
+      "studying": "studying",
+      "anything": "anything."
+    },
+    "agreeTerms": "I agree with",
+    "userTerms": "User Terms And Conditions",
+    "acknowledgePrivacy": "and acknowledge the",
+    "privacyNotice": "Privacy notice",
+    "confirmationEmailSent": "Confirmation link sent to",
+    "openEmailAppBtn": "Open Email App",
+    "openGmailBtn": "Open Gmail App",
+    "validationErrors": {
+      "emailPasswordRequired": "Please enter both email and password",
+      "passwordsNoMatch": "Passwords don't match",
+      "passwordTooShort": "Password must be at least 8 characters"
+    }
   },
   "onboarding": {
     "skip": "Skip",
@@ -150,6 +175,7 @@
     "advancedFeatures": "Advanced Features",
     "signOut": "Sign out",
     "upgrade": "Upgrade to Pro",
+    "deleteAccount": "Delete Account",
     "unlockFeatures": "Unlock all features"
   },
   "chat": {
@@ -163,6 +189,12 @@
     "editTitle": "Edit title",
     "noMessages": "No messages yet",
     "startConversation": "Start a conversation"
+  },
+  "thresdPage": {
+    "threadActions": "Thread Actions",
+    "shareThread": "Share Thread",
+    "manageFiles": "Manage Files",
+    "deleteThread": "Delete Thread"
   },
   "agents": {
     "selectAgent": "Select Worker",
@@ -386,7 +418,6 @@
     "lowCredits": "Low credits",
     "lowCreditsWarning": "Your credit balance is low. Purchase more to continue using the service.",
     "purchaseCredits": "Purchase Credits",
-    "buyCredits": "Buy Credits",
     "manageBilling": "Manage Billing",
     "manageSubscription": "Manage Subscription",
     "monthlyPrice": "/month",
@@ -434,7 +465,110 @@
     "loading": "Loading billing information...",
     "error": "Failed to load billing information",
     "tryAgain": "Try again",
-    "remaining": "remaining"
+    "remaining": "remaining",
+    "totalAvailableCredits": "Total Available Credits",
+    "upgrade": "Upgrade",
+    "topUp": "Top up",
+    "creditBreakdown": "Credit Breakdown",
+    "renewsInDays": "Renews in {{days}}d",
+    "noRenewal": "No renewal",
+    "extra": "Extra",
+    "nextBilling": "Next Billing",
+    "changePlan": "Change Plan",
+    "upgradeOrDowngrade": "Upgrade or downgrade",
+    "billingPortal": "Billing Portal",
+    "paymentMethods": "Payment methods",
+    "annualCommitment": "Annual Commitment",
+    "activeUntil": "Active until {{date}}",
+    "subscriptionCancelled": "Subscription Cancelled",
+    "subscriptionCancelledOn": "Your subscription will be cancelled on {{date}}",
+    "reactivate": "Reactivate",
+    "reactivating": "Reactivating...",
+    "howCreditsWork": "How credits work",
+    "learnAboutCredits": "Learn about credit usage",
+    "cancelPlan": "Cancel Plan",
+    "usage": "Usage",
+    "last30Days": "Last 30d",
+    "failedToLoad": "Failed to load subscription data",
+    "buyCredits": "Buy Credits",
+    "availableCredits": "Available credits",
+    "creditPackages": "Credit Packages",
+    "choosePackageBoost": "Choose a package and boost your credit balance",
+    "ranOutOfCredits": "You ran out of credits. Upgrade now.",
+    "getStarted": "Get Started", 
+    "upgradeNow": "Upgrade Now",
+    "downgrade": "Downgrade",
+    "switchPlan": "Switch Plan",
+    "yearlyCommitment": "Yearly",
+    "save15Percent": "Save 15%",
+    "mostPopular": "Most Popular",
+    "perMonth": "/month",
+    "creditsIncluded": "{{amount}} credits/month",
+    "everything": "Everything in {{plan}}",
+    "plus": "plus",
+    "addCredits": "Add Credits",
+    "needMoreCredits": "Need more credits?",
+    "purchaseAdditional": "Purchase additional credits anytime"
+  },
+  "theme": {
+    "title": "Appearance",
+    "preview": "Preview",
+    "themeOptions": "Theme Options",
+    "light": "Light",
+    "dark": "Dark",
+    "system": "System",
+    "lightDescription": "Always use light theme",
+    "darkDescription": "Always use dark theme",
+    "systemDescription": "Follow device settings",
+    "lightMode": "Light Mode",
+    "darkMode": "Dark Mode"
+  },
+  "language": {
+    "title": "Language",
+    "selectLanguage": "Select Language"
+  },
+  "beta": {
+    "title": "Beta Features",
+    "experimentalFeatures": "Experimental Features",
+    "earlyAccess": "Get early access to new capabilities",
+    "advancedFeatures": "Advanced Features",
+    "advancedDescription": "Access experimental features and advanced tools before they're released to everyone",
+    "whatsIncluded": "What's Included",
+    "experimentalTools": "Experimental Tools",
+    "experimentalToolsDescription": "Try out new capabilities before official release",
+    "advancedSettings": "Advanced Settings",
+    "advancedSettingsDescription": "Fine-tune your experience with power user options",
+    "pleaseNote": "Please Note",
+    "betaWarning": "Beta features may be unstable and could change without notice. Use at your own discretion."
+  },
+  "accountDeletion": {
+    "title": "Delete Account",
+    "deletionScheduled": "Deletion Scheduled",
+    "scheduledFor": "Scheduled For",
+    "deleteYourAccount": "Delete Your Account",
+    "actionCannotBeUndone": "This action cannot be undone",
+    "accountWillBeDeleted": "Your account will be permanently deleted",
+    "whatWillBeDeleted": "What Will Be Deleted",
+    "allAgents": "All your agents and agent versions",
+    "allThreads": "All your threads and conversations", 
+    "allCredentials": "All your credentials and integrations",
+    "subscriptionData": "Your subscription and billing data",
+    "gracePeriod": "30-Day Grace Period",
+    "gracePeriodDescription": "Your account will be scheduled for deletion in 30 days. You can cancel this request anytime during the grace period.",
+    "typeDeleteToConfirm": "Type {{text}} to confirm",
+    "deletePlaceholder": "DELETE",
+    "deleteAccount": "Delete Account",
+    "cancelDeletion": "Cancel Deletion",
+    "processing": "Processing...",
+    "deletionScheduledSuccess": "Your account will be deleted in 30 days. You can cancel this request anytime.",
+    "cancelDeletionTitle": "Cancel Account Deletion",
+    "cancelDeletionDescription": "Do you want to cancel the deletion of your account? Your account and all data will be preserved.",
+    "back": "Back",
+    "deletionCancelled": "Deletion Cancelled",
+    "deletionCancelledSuccess": "Your account is safe. The deletion has been cancelled.",
+    "failedToRequest": "Failed to request account deletion",
+    "failedToCancel": "Failed to cancel account deletion",
+    "cancelRequestDescription": "You can cancel this request anytime before the deletion date. All your data will be preserved if you cancel."
   },
   "integrations": {
     "title": "Integrations",
@@ -462,5 +596,41 @@
     "loadingThreads": "Failed to load chats",
     "loadingTriggers": "Failed to load triggers",
     "tryAgain": "Please try again later"
+  },
+  "usage": {
+    "title": "Usage",
+    "totalCreditsUsed": "Total Credits Used",
+    "loadingUsageData": "Loading usage data...",
+    "failedToLoad": "Failed to load usage data",
+    "usageStats": "Usage Stats",
+    "conversations": "Conversations",
+    "avgPerChat": "Avg per Chat",
+    "usageTrend": "Usage Trend",
+    "lastConversations": "Last {{count}} conversations",
+    "conversationBreakdown": "Conversation Breakdown",
+    "noConversationsYet": "No conversations yet",
+    "conversationHistoryAppearHere": "Your conversation history will appear here",
+    "showingTopOf": "Showing top {{shown}} of {{total}} conversations",
+    "credits": "credits",
+    "upgradeYourPlan": "Upgrade Your Plan",
+    "upgradeDescription": "Get more credits and unlock premium features",
+    "topUp": "Top Up",
+    "topUpDescription": "Top up your account with additional credits",
+    "upgrade": "Upgrade",
+    "upgradeToUltra": "Upgrade to Ultra",
+    "upgradeToUltraDescription": "Get the highest tier for maximum credits"
+  },
+  "nameEdit": {
+    "title": "Edit Profile",
+    "displayName": "Display Name",
+    "yourNamePlaceholder": "Your name",
+    "emailAddress": "Email Address",
+    "notAvailable": "Not available",
+    "nameRequired": "Name is required",
+    "nameTooLong": "Name is too long (max 100 characters)",
+    "saving": "Saving...",
+    "saveChanges": "Save Changes",
+    "nameUpdated": "Your name has been updated successfully",
+    "failedToUpdate": "Failed to update name. Please try again."
   }
 }
